# HW1-Render

./: .gitignore  CMakeLists.txt
res/shaders/: fragment-golfball.glsl  fragment.glsl  vertex.glsl
src/: constants.cpp  constants.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object.h  shader.cpp  shader.h  texture.h  vertex.h
